<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.toryes.studnow.activity.LoginActvity">

    <ImageView
        android:layout_weight="0.25"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_weight="0.55"
    android:layout_below="@+id/logo"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="0dp">

    <EditText
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="45dp"
        android:background="@drawable/round_button"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:textColor="@color/edit_text_color"
        android:textColorHint="@color/edt_bg" />

    <EditText
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:hint="@string/pass_word"
        android:background="@drawable/round_button"
        android:inputType="textPassword"
        android:textColor="@color/edit_text_color"
        android:textColorHint="@color/edt_bg"
        android:layout_marginTop="20dp"
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <Button
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="loginButtonClick"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:background="@drawable/round_button_design"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_weight="0.03"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:id="@+id/tvDontHaveAcnt"
            android:text="@string/dont_have_account"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvSignUp"
            android:textColor="@color/text_color"
            android:layout_marginLeft="1dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvForgotPass"
        android:textSize="15sp"

        android:textColor="@color/edit_text_color"
        android:layout_weight="0.025"
        android:text="@string/forgot_pass"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <TextView
        android:layout_weight="0.025"
        android:textSize="15sp"

        android:textColor="@color/edit_text_color"
        android:text="Or Login With"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

</LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_weight="0.1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_google_plus"
            android:onClick="gmailLoginButton"
            android:text="gmail"
            android:textColor="@color/white"
            android:background="@drawable/gmail_btn"
            android:layout_weight="0.5"
            android:id="@+id/btnGmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"  />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_facebook_login"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
        <Button
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:layout_marginTop="5dp"
            android:onClick="fbLoginButton"
            android:text="facebook"
            android:textColor="@color/white"
            android:background="@drawable/fb_button"
            android:id="@+id/btnFb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"  />
    </LinearLayout>



</LinearLayout>
